--- a/index.html
+++ b/index.html
@@ -12,7 +12,44 @@
     <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="d-none d-md-block py-3">
+                <ul class="topbar-content">
+                    <li><span>License #1119328 </span></li>
+                    <li><a href="tel:619-764 1550"><img src="./img/icon/phone.svg" alt="" class="me-2">619-764 1550</a></li>
+                    <li><a href="mailto:info@WindwardConstructionLLC.com">info@WindwardConstructionLLC.com</a></li>
+                </ul>
+            </div>
+            <div class="py-3">
+                <div class="row g-0">
+                    <div class="col-md-auto">
+                        <div class="mobile-header">
+                            <a href="#" class="site-logo">
+                                <img src="./img/logo.svg" alt="site_logo">
+                            </a>
+                            <button class="hamburger-btn d-md-none" onclick="document.body.classList.toggle('active-menu')" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md navbar-expand-md">
+                        <nav class="navbar collapse navbar-collapse" id="mainNavbar">
+                            <ul>
+                                <li><a href="#">PROJECTS</a></li>
+                                <li><a href="#">SERVICES</a></li>
+                                <li><a href="#">ABOUT</a></li>
+                                <li><a href="#">BLOG</a></li>
+                            </ul>
+                            <a href="#" class="primary-btn">CONTACT</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
 
 
