--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="d-none d-md-block py-3">
+            <div class="d-none d-lg-block py-3">
                 <ul class="topbar-content">
                     <li><span>License #1119328 </span></li>
                     <li><a href="tel:619-764 1550"><img src="./img/icon/phone.svg" alt="" class="me-2">619-764 1550</a></li>
@@ -22,20 +22,21 @@
                 </ul>
             </div>
             <div class="py-3">
-                <div class="row g-0">
-                    <div class="col-md-auto">
+                <div class="row align-items-center g-0">
+                    <div class="col-lg-auto">
                         <div class="mobile-header">
                             <a href="#" class="site-logo">
-                                <img src="./img/logo.svg" alt="site_logo">
+                                <img src="./img/logo.svg" alt="site_logo" class="primary">
+                                <img src="./img/logo-white.svg" alt="site_logo" class="white">
                             </a>
-                            <button class="hamburger-btn d-md-none" onclick="document.body.classList.toggle('active-menu')" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+                            <button class="hamburger-btn d-lg-none" onclick="document.body.classList.toggle('active-menu')" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
                                 <span></span>
                                 <span></span>
                                 <span></span>
                             </button>
                         </div>
                     </div>
-                    <div class="col-md navbar-expand-md">
+                    <div class="col-lg navbar-expand-lg">
                         <nav class="navbar collapse navbar-collapse" id="mainNavbar">
                             <ul>
                                 <li><a href="#">PROJECTS</a></li>
@@ -43,7 +44,9 @@
                                 <li><a href="#">ABOUT</a></li>
                                 <li><a href="#">BLOG</a></li>
                             </ul>
-                            <a href="#" class="primary-btn">CONTACT</a>
+                            <div class="navbar-right">
+                                <a href="#" class="primary-btn">CONTACT</a>
+                            </div>
                         </nav>
                     </div>
                 </div>
@@ -53,7 +56,34 @@
 
 
 
-
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <span class="large-text">WHERE WIND MEETS WAVES, EXCELLENCE PREVAILS.</span>
+                <div class="row align-items-end">
+                    <div class="col-md">
+                        <div class="footer-left">
+                            <div class="copyright-text">
+                                <a href="#"><img src="./img/footer-logo.svg" alt="site_logo"></a>
+                                <p class="small">Copyright © 2024 Windward Construction LLC., All Rights Reserved.</p>
+                            </div>
+                            <ul class="social-link">
+                                <li><a href="#">LinkedIn</a></li>
+                                <li><a href="#">Houzz</a></li>
+                                <li><a href="#">Instagram</a></li>
+                            </ul>
+                        </div>
+                        
+                    </div>
+                    <div class="col-md-auto">
+                        <div class="footer-right-img">
+                            <img src="./img/footer-box-img.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- All script file -->
     <script src="./js/jquery-3.7.1.min.js"></script>
