--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="footer-content">
                 <span class="large-text">WHERE WIND MEETS WAVES, EXCELLENCE PREVAILS.</span>
-                <div class="row align-items-end">
+                <div class="row align-items-end flex-column-reverse flex-md-row gy-5">
                     <div class="col-md">
                         <div class="footer-left">
                             <div class="copyright-text">
