hero section completed

--- a/index.html
+++ b/index.html
@@ -54,7 +54,24 @@
         </div>
     </header>
 
-
+    <main>
+        <section class="hero-section">
+            <div class="container">
+                <div class="hero-heading">
+                    <h1>We don't just build structures,</h1>
+                    <h1>We mold dreams into reality.</h1>
+                </div>
+                <h5>Join us on a journey where every project sets sail towards a brighter, bolder future of excellence and perfection.</h5>
+                <div class="button-group pt-3">
+                    <a href="#" class="primary-btn">SERVICES</a>
+                    <a href="#" class="secondary-btn">PROJECTS</a>
+                </div>
+                <div class="hero-img">
+                    <img src="./img/image-building.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <div class="container">
