--- a/index.html
+++ b/index.html
@@ -71,6 +71,147 @@
                 </div>
             </div>
         </section>
+
+        <section class="featured-section">
+            <div class="container">
+                <div class="featured-heading">
+                    <h2 class="fst-italic">Featured  Projects</h2>
+                    <ul class="nav featured-nav">
+                        <li><a href="#featured-tab-1" data-bs-toggle="tab" class="active">Custom Homes</a></li>
+                        <li><a href="#featured-tab-2" data-bs-toggle="tab">Multi-family</a></li>
+                        <li><a href="#featured-tab-3" data-bs-toggle="tab">Development</a></li>
+                    </ul>
+                </div>
+                <div class="featured-tab">
+                    <div class="tab-content">
+                        <div class="tab-pane fade active show" id="featured-tab-1">
+                            <div class="row featured-gutter">
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Connallon</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Hoffman</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Penrick Barn</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="featured-tab-2">
+                            <div class="row featured-gutter">
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Connallon</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Hoffman</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Penrick Barn</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="featured-tab-3">
+                            <div class="row featured-gutter">
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Connallon</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Hoffman</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Penrick Barn</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <h3 class="mb-4">Sail into excellence with Windward Construction.</h3>
+                    <a href="#" class="secondary-btn">ALL PROJECTS</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
