index page completed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="row align-items-center g-0">
                     <div class="col-lg-auto">
                         <div class="mobile-header">
-                            <a href="#" class="site-logo">
+                            <a href="./index.html" class="site-logo">
                                 <img src="./img/logo.svg" alt="site_logo" class="primary">
                                 <img src="./img/logo-white.svg" alt="site_logo" class="white">
                             </a>
@@ -209,6 +209,40 @@
                 <div class="text-center">
                     <h3 class="mb-4">Sail into excellence with Windward Construction.</h3>
                     <a href="#" class="secondary-btn">ALL PROJECTS</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="joining-section">
+            <div class="container">
+                <div class="row gutter-32 align-items-end">
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="single-house-img mb-sm-4">
+                            <img src="./img/house-sample-1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="single-house-img">
+                            <img src="./img/house-sample-2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="single-house-img mb-sm-5">
+                            <img src="./img/house-sample-3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="single-house-img">
+                            <img src="./img/house-sample-4.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="joinig-content">
+                    <h3>Join us as we set sail towards a horizon of unparalleled excellence and craftsmanship.</h3>
+                    <div class="joining-right">
+                        <p class="mb-4 pb-md-2">Partnering with Windward Construction means choosing a reliable and reputable construction partner that is committed to excellence in every aspect of the building process.</p>
+                        <a href="#" class="secondary-btn">CONTACT NOW</a>
+                    </div>
                 </div>
             </div>
         </section>
