--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <ul>
                                 <li><a href="#">PROJECTS</a></li>
                                 <li><a href="#">SERVICES</a></li>
-                                <li><a href="#">ABOUT</a></li>
+                                <li><a href="./about.html">ABOUT</a></li>
                                 <li><a href="#">BLOG</a></li>
                             </ul>
                             <div class="navbar-right">
