benefits section completed

--- a/about.html
+++ b/about.html
@@ -55,7 +55,95 @@
     </header>
 
     <main>
-        
+        <section class="about-banner-section">
+            <div class="about-section-container">
+                <div class="container">
+                    <div class="about-banner-content">
+                        <div class="about-banner-img">
+                            <img src="./img/about-banner.jpg" alt="">
+                            <div class="about-box-content">
+                                <h5>We don't fear the winds of change; we navigate them.</h5>
+                            </div>
+                        </div>
+                        <div class="about-banner-text">
+                            <h5>Welcome to Windward Construction</h5>
+                            <h2>Where excellence meets craftsmanship.</h2>
+                            <h5 class="fw-normal mb-4   ">Inspired by the precision and grace of sailing, we approach each project with meticulous attention to detail and a commitment to quality. Our company rides the waves of innovation and integrity, delivering superior construction services that stand the test of time.</h5>
+                            <div class="button-group">
+                                <a href="#" class="primary-btn">BENEFITS</a>
+                                <a href="#" class="secondary-btn">MEET THE FOUNDER</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="benefits-section wind-section">
+            <div class="container">
+                <div class="benefits-content">
+                    <h2>Choosing Windward Construction comes with a <span>multitude of benefits</span></h2>
+                    <div class="row gutter-32">
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="single-benefit-details">
+                                <span class="cognition-icon"><img src="./img/icon/cognition.svg" alt="cognition_svg"></span>
+                                <h5>Expertise and Experience</h5>
+                                <p>With a seasoned team of professionals, Windward Construction brings a wealth of experience to every project, ensuring top-notch quality.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="single-benefit-details">
+                                <span class="cognition-icon"><img src="./img/icon/cognition.svg" alt="cognition_svg"></span>
+                                <h5>Innovation and Sustainability</h5>
+                                <p>We pride ourselves on adopting innovative construction practices and incorporating sustainable solutions, contributing to a greener and more efficient future.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="single-benefit-details">
+                                <span class="cognition-icon"><img src="./img/icon/cognition.svg" alt="cognition_svg"></span>
+                                <h5>Client-Centric Approach</h5>
+                                <p>Our commitment to client satisfaction is unwavering. We prioritize effective communication, transparency, and collaboration to bring your vision to life seamlessly.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="single-benefit-details">
+                                <span class="cognition-icon"><img src="./img/icon/cognition.svg" alt="cognition_svg"></span>
+                                <h5>Quality Craftsmanship</h5>
+                                <p>Windward Construction is synonymous with superior craftsmanship. We pay attention to every detail, ensuring that each project is executed with precision and excellence.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="single-benefit-details">
+                                <span class="cognition-icon"><img src="./img/icon/cognition.svg" alt="cognition_svg"></span>
+                                <h5>Timely Delivery</h5>
+                                <p>We understand the importance of deadlines. Windward Construction is dedicated to delivering projects on time, without compromising on quality.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="single-benefit-details">
+                                <span class="cognition-icon"><img src="./img/icon/cognition.svg" alt="cognition_svg"></span>
+                                <h5>Safety First</h5>
+                                <p>Our rigorous safety protocols prioritize the well-being of everyone involved in our projects. A safe work environment is non-negotiable for us.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="single-benefit-details">
+                                <span class="cognition-icon"><img src="./img/icon/cognition.svg" alt="cognition_svg"></span>
+                                <h5>Custom Solutions</h5>
+                                <p>Every project is unique, and we tailor our approach to meet your specific needs. Our ability to provide custom solutions sets us apart in the construction industry.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="single-benefit-details">
+                                <span class="cognition-icon"><img src="./img/icon/cognition.svg" alt="cognition_svg"></span>
+                                <h5>Proven Track Record</h5>
+                                <p>Our portfolio showcases a diverse range of successfully completed projects, highlighting our capability to handle various challenges and deliver outstanding results.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
