--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </section>
 
-        <section class="featured-section">
+        <section class="featured-section wind-section">
             <div class="container">
                 <div class="featured-heading">
                     <h2 class="fst-italic">Featured  Projects</h2>
@@ -213,7 +213,7 @@
             </div>
         </section>
 
-        <section class="joining-section">
+        <section class="joining-section wind-section">
             <div class="container">
                 <div class="row gutter-32 align-items-end">
                     <div class="col-sm-6 col-lg-3">
