--- a/about.html
+++ b/about.html
@@ -145,6 +145,26 @@
             </div>
         </section>
 
+        <section class="wide-section wind-section">
+            <div class="container">
+                <div class="div-820">
+                    <div class="row align-items-center justify-content-center gutter-32">
+                        <div class="col-sm">
+                            <div class="wide-content">
+                                <img src="./img/philosopher-img.png" alt="">
+                                <h3>Our philosophy is as fluid as the waves and as resilient as the wind.</h3>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="wide-img">
+                                <img src="./img/wide-section-img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
@@ -164,7 +184,6 @@
                                 <li><a href="#">Instagram</a></li>
                             </ul>
                         </div>
-                        
                     </div>
                     <div class="col-md-auto">
                         <div class="footer-right-img">
