about-page completed

--- a/about.html
+++ b/about.html
@@ -146,19 +146,56 @@
         </section>
 
         <section class="wide-section wind-section">
-            <div class="container">
-                <div class="div-820">
-                    <div class="row align-items-center justify-content-center gutter-32">
-                        <div class="col-sm">
-                            <div class="wide-content">
-                                <img src="./img/philosopher-img.png" alt="">
-                                <h3>Our philosophy is as fluid as the waves and as resilient as the wind.</h3>
+            <div class="wide-inner-container">
+                <div class="container">
+                    <div class="div-820">
+                        <div class="row align-items-center justify-content-center gutter-32">
+                            <div class="col-sm">
+                                <div class="wide-content">
+                                    <img src="./img/philosopher-img.png" alt="">
+                                    <h3>Our philosophy is as fluid as the waves and as resilient as the wind.</h3>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="wide-img">
+                                    <img src="./img/wide-section-img.jpg" alt="">
+                                </div>
                             </div>
                         </div>
-                        <div class="col-sm">
-                            <div class="wide-img">
-                                <img src="./img/wide-section-img.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="text-section wind-section">
+            <div class="container">
+                <div class="div-820">
+                    <h5 class="mb-1">At the Helm</h5>
+                    <h3 class="mb-4 pb-md-2">Alec Stephens</h3>
+                    <p>Began his journey in Marblehead, MA, a small sailing community just north of Boston. He quickly developed a deep rooted affinity for the salt water and the New England charm. But soon his family moved to SARATOGA SPRINGS in Upstate York known for thoroughbred racing and Victorian architecture. While growing up he was constantly in the midst of his parents’ home renovation projects with the biggest being an entire build out of an old brick carriage house which would be his home through his teenage years. During college he spent his summers working on construction crews to help pay for college. Upon graduating with a business degree and a concentration in finance, he headed to Wall Street. After experiencing 9/11 first hand while living in New York, he had a shift in priorities and decided to head back to Saratoga in search of “quality of life”….And with the swing of a hammer, a new chapter began.</p>
+                    <p>Alec has over 25 years of real estate related experience. He is a second generation developer/builder and began his career in 1995 by investing in small multifamily properties. In 2004 he founded SAS Builders, LLC, a general contracting design/build firm focused on developing land and constructing award winning residential homes. His mantra emphasized environmentally responsible site design and construction of sustainable, energy efficient homes combining modern technology with old-world craftsmanship.</p>
+                    <p>He is skilled in the trades and has built multiple homes with his own hands start to finish. Alec has a firm grasp of ‘the big picture’ with a creative visionary approach. He’s an excellent problem solver and maintains a sharp eye for the details. Ultimately, his experience evolved into large scale mixed use urban infill projects that combined traditional architecture with modern concepts and design.</p>
+                    <p>In 2014, after having made a “fateful” trip to San Diego to visit his parents for Christmas, Alec bought a boat, moved to San Diego and made his home on the water full time. He worked in multifamily brokerage and commercial finance for a few years before returning to his passion…building and development. After managing the construction of fa few multifamily projects, Windward Construction was born.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="partner-section wind-section">
+            <div class="container">
+                <div class="row gy-5 align-items-center flex-column-reverse flex-md-row">
+                    <div class="col-md">
+                        <div class="partner-text-content">
+                            <h5>Partner with us</h5>
+                            <h3 class="mb-4 pb-md-2">Join us as we set sail towards a horizon of unparalleled excellence and craftsmanship.</h3>
+                            <div class="button-group">
+                                <a href="#" class="primary-btn">PROJECTS</a>
+                                <a href="#" class="secondary-btn">CONTACT US</a>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="partner-banner">
+                            <img src="./img/partner-banner.jpg" alt="">
                         </div>
                     </div>
                 </div>
