--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <nav class="navbar collapse navbar-collapse" id="mainNavbar">
                             <ul>
                                 <li><a href="#">PROJECTS</a></li>
-                                <li><a href="#">SERVICES</a></li>
+                                <li><a href="./services.html">SERVICES</a></li>
                                 <li><a href="./about.html">ABOUT</a></li>
                                 <li><a href="#">BLOG</a></li>
                             </ul>
