--- a/services.html
+++ b/services.html
@@ -131,20 +131,23 @@
         <section class="drawing-section wind-section">
             <div class="container">
                 <div class="row align-items-end gutter-32">
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="drawing-img">
-
+                            <img src="./img/drawing-img-1.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="drawing-content">
                             <h3 class="mb-4 pb-md-2">Windward Construction's dedication to <span>excellence</span>, <span>innovation</span>, and <span>client satisfaction</span> is evident in every project we undertake.</h3>
                             <a href="#" class="secondary-btn">CONTACT US NOW</a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="drawing-img">
-
+                            <img src="./img/drawing-img-2.jpg" alt="">
+                            <div class="drawing-content-box">
+                                <h5>We bring expertise and reliability to the forefront.</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
