--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <div class="col-lg navbar-expand-lg">
                         <nav class="navbar collapse navbar-collapse" id="mainNavbar">
                             <ul>
-                                <li><a href="#">PROJECTS</a></li>
+                                <li><a href="./projects.html">PROJECTS</a></li>
                                 <li><a href="./services.html">SERVICES</a></li>
                                 <li><a href="./about.html">ABOUT</a></li>
                                 <li><a href="#">BLOG</a></li>
@@ -185,7 +185,7 @@
                 <div class="row gy-5 align-items-center flex-column-reverse flex-md-row">
                     <div class="col-md">
                         <div class="partner-text-content">
-                            <h5>Partner with us</h5>
+                            <h5><span>Partner with us</span></h5>
                             <h3 class="mb-4 pb-md-2">Join us as we set sail towards a horizon of unparalleled excellence and craftsmanship.</h3>
                             <div class="button-group">
                                 <a href="#" class="primary-btn">PROJECTS</a>
