--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="col-lg navbar-expand-lg">
                         <nav class="navbar collapse navbar-collapse" id="mainNavbar">
                             <ul>
-                                <li><a href="#">PROJECTS</a></li>
+                                <li><a href="./projects.html">PROJECTS</a></li>
                                 <li><a href="./services.html">SERVICES</a></li>
                                 <li><a href="./about.html">ABOUT</a></li>
                                 <li><a href="#">BLOG</a></li>
@@ -57,14 +57,13 @@
     <main>
         <section class="hero-section">
             <div class="container">
-                <div class="hero-heading">
-                    <h1>We don't just build structures,</h1>
-                    <h1>We mold dreams into reality.</h1>
-                </div>
-                <h5>Join us on a journey where every project sets sail towards a brighter, bolder future of excellence and perfection.</h5>
-                <div class="button-group pt-3">
-                    <a href="#" class="primary-btn">SERVICES</a>
-                    <a href="#" class="secondary-btn">PROJECTS</a>
+                <div class="hero-content">
+                    <h1 class="mb-3">We don't just build structures, <span>We mold dreams into reality.</span></h1>
+                    <h5 class="mb-4">Join us on a journey where every project sets sail towards a brighter, bolder future of excellence and perfection.</h5>
+                    <div class="button-group">
+                        <a href="#" class="primary-btn">SERVICES</a>
+                        <a href="#" class="secondary-btn">PROJECTS</a>
+                    </div>
                 </div>
                 <div class="hero-img">
                     <img src="./img/image-building.png" alt="">
