--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
                     <div class="col-lg navbar-expand-lg">
                         <nav class="navbar collapse navbar-collapse" id="mainNavbar">
                             <ul>
-                                <li><a href="#">PROJECTS</a></li>
+                                <li><a href="./projects.html">PROJECTS</a></li>
                                 <li><a href="./services.html">SERVICES</a></li>
                                 <li><a href="./about.html">ABOUT</a></li>
                                 <li><a href="#">BLOG</a></li>
