projects page completed

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,150 @@
     </header>
 
     <main>
-        section.
+        <section class="project-section wind-section">
+            <div class="container">
+                <div class="project-heading text-center">
+                    <h1 class="mb-5">We don't just build structures; <span>We create lasting legacies.</span></h1>
+                    <ul class="nav featured-nav project-nav">
+                        <li><a href="#featured-tab-1" data-bs-toggle="tab" class="active">Custom Homes</a></li>
+                        <li><a href="#featured-tab-2" data-bs-toggle="tab">Multi-family</a></li>
+                        <li><a href="#featured-tab-3" data-bs-toggle="tab">Development</a></li>
+                    </ul>
+                </div>
+                <div class="project-tab">
+                    <div class="tab-content">
+                        <div class="tab-pane fade active show" id="featured-tab-1">
+                            <div class="row featured-gutter">
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Connallon</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Hoffman</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Penrick Barn</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="featured-tab-2">
+                            <div class="row featured-gutter">
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Connallon</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Hoffman</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Penrick Barn</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="featured-tab-3">
+                            <div class="row featured-gutter">
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Connallon</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Hoffman</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">Penrick Barn</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="single-featured-content">
+                                        <img src="./img/featured-tab-img.png" alt="">
+                                        <a href="#">4 Moss Creek</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pagination">
+                    <a href="#">Previous</a>
+                    <a href="#" class="active">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">Next</a>
+                </div>
+            </div>
+        </section>
 
     </main>
 
