blog page completed

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
                                 <li><a href="./projects.html">PROJECTS</a></li>
                                 <li><a href="./services.html">SERVICES</a></li>
                                 <li><a href="./about.html">ABOUT</a></li>
-                                <li><a href="#">BLOG</a></li>
+                                <li><a href="./blog.html">BLOG</a></li>
                             </ul>
                             <div class="navbar-right">
                                 <a href="#" class="primary-btn">CONTACT</a>
@@ -68,7 +68,7 @@
                 <div class="project-tab">
                     <div class="tab-content">
                         <div class="tab-pane fade active show" id="featured-tab-1">
-                            <div class="row featured-gutter">
+                            <div class="row gutter-32">
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
