--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <li><a href="./projects.html">PROJECTS</a></li>
                                 <li><a href="./services.html">SERVICES</a></li>
                                 <li><a href="./about.html">ABOUT</a></li>
-                                <li><a href="#">BLOG</a></li>
+                                <li><a href="./blog.html">BLOG</a></li>
                             </ul>
                             <div class="navbar-right">
                                 <a href="#" class="primary-btn">CONTACT</a>
