--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                                 <li><a href="./blog.html">BLOG</a></li>
                             </ul>
                             <div class="navbar-right">
-                                <a href="#" class="primary-btn">CONTACT</a>
+                                <a href="./contact.html" class="primary-btn">CONTACT</a>
                             </div>
                         </nav>
                     </div>
@@ -58,33 +58,33 @@
         <section class="contact-section wind-section">
             <div class="container">
                 <div class="contact-content">
-                    <div class="row gutter-32">
+                    <div class="row gutter-32 gy-5 justify-content-center">
                         <div class="col-md-6 col-lg-4">
-                            <div class="contact-image">
+                            <div class="contact-image text-center">
                                 <img src="./img/contact-image.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-4">
                             <div class="contact-info">
                                 <div class="single-contact-info">
-                                    <p class="small">LICENSE:</p>
+                                    <span class="small">LICENSE:</span>
                                     <h5>#1119328</h5>
                                 </div>
                                 <div class="single-contact-info">
-                                    <p class="small">PHONE:</p>
+                                    <span class="small">PHONE:</span>
                                     <h5>(619-764-1500)</h5>
                                 </div>
                                 <div class="single-contact-info">
-                                    <p class="small">EMAIL:</p>
+                                    <span class="small">EMAIL:</span>
                                     <h5>alec@windwardconstructionllc.com</h5>
                                 </div>
                                 <div class="single-contact-info">
-                                    <p class="small">ADDRESS:</p>
+                                    <span class="small">ADDRESS:</span>
                                     <h5>Del Mar, CA 92014.</h5>
                                 </div>
                                 <span class="horaizontal-bar"></span>
                                 <div class="single-contact-info">
-                                    <ul class="social-info">
+                                    <ul>
                                         <li><a href="#">LinkedIn</a></li>
                                         <li><a href="#">Houzz</a></li>
                                         <li><a href="#">Instagram</a></li>
@@ -96,21 +96,24 @@
                             <form>
                                 <div class="contact-form">
                                     <label>
-                                        <span class="small"></span>
+                                        <span class="small">Full Name</span>
                                         <input type="text" name="" placeholder="e.g. Mike Harrison">
                                     </label>
                                     <label>
-                                        <span class="small"></span>
+                                        <span class="small">Email Address</span>
                                         <input type="email" name="" placeholder="e.g. mike@mail.com">
                                     </label>
                                     <label>
-                                        <span class="small"></span>
+                                        <span class="small">Phone Number</span>
                                         <input type="number" name="" placeholder="e.g. (895)-852-4562">
                                     </label>
                                     <label>
-                                        <span class="small"></span>
+                                        <span class="small">How we can help?</span>
                                         <textarea name="" placeholder="Type here any inquiry or request"></textarea>
                                     </label>
+                                    <div class="submit-btn pt-3">
+                                        <a href="#" class="secondary-btn">SEND MESSAGE</a>
+                                    </div>
                                 </div>
                             </form>
                         </div>
