--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <li><a href="./blog.html">BLOG</a></li>
                             </ul>
                             <div class="navbar-right">
-                                <a href="#" class="primary-btn">CONTACT</a>
+                                <a href="./contact.html" class="primary-btn">CONTACT</a>
                             </div>
                         </nav>
                     </div>
